--- a/index.html
+++ b/index.html
@@ -425,8 +425,11 @@
 <section class="hero" id="home">
     <div class="hero-content">
         <h1>Your Vision, Our Spotlight</h1>
-        <p>Premium Media Consulting & Digital Branding Agency in Nigeria</p>
-        <a href="#contact" class="cta-btn">Get Started Today</a>
+        <p>A Media Consulting & Digital Branding Agency in Nigeria</p>
+       <a href="https://wa.me/2347084988884" class="cta-btn" target="_blank">
+    Get Started Today
+</a>
+
     </div>
 </section>
 
@@ -481,9 +484,9 @@
     <h2 class="section-title">Let's Work Together</h2>
     <div class="contact-info">
         <p><strong>Spotlight Media Nigeria</strong></p>
-        <p>Email: <a href="mailto:info@spotlightmedia.ng">info@spotlightmedia.ng</a></p>
-        <p>Phone: <a href="tel:+2340000000000">+234 000 000 0000</a></p>
-        <p>Lagos, Nigeria</p>
+        <p>Email: <a href="mailto:Dancingpen123@gmail.com">Dancingpen123@gmail.com</a></p>
+        <p>Phone: <a href="tel:+2347084988884">+234 708 498 8884</a></p>
+        <p>Sokoto, Nigeria</p>
     </div>
 </section>
 
@@ -501,7 +504,9 @@
         </div>
         <div class="footer-right">
             <p style="opacity:0.8;">Ready to elevate your brand?</p>
-            <a href="#contact" style="color:var(--primary); font-weight:600;">Start a Project →</a>
+<a href="https://wa.me/2347084988884" style="color:var(--primary); font-weight:600;" target="_blank">
+    Start a Project →
+</a>
         </div>
     </div>
     <div class="footer-bottom" style="text-align:center; padding:15px 0;">
